tests/ui/option_vec.stderr
error: unsupported element type of Option
 --> tests/ui/option_vec.rs:4:19
  |
4 |         fn f() -> Option<Vec<u8>>;
  |                   ^^^^^^^^^^^^^^^
